[gd_scene load_steps=14 format=3 uid="uid://drpasabq4wjcq"]

[ext_resource type="Script" path="res://ui/shop.gd" id="1_lvcpq"]
[ext_resource type="FontFile" uid="uid://1mt6tq6qrv1k" path="res://assets/Kenney Thick.ttf" id="2_e6hdv"]
[ext_resource type="Theme" uid="uid://dlxgcekwp6ob" path="res://ui/shop.tres" id="2_t4vr5"]
[ext_resource type="Theme" uid="uid://csrxccdqow62n" path="res://ui/menu.tres" id="4_myh5m"]

[sub_resource type="Animation" id="Animation_qjyf3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rl0ji"]
resource_name = "invisible"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rlaa7"]
resource_name = "visible"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gij57"]
_data = {
"RESET": SubResource("Animation_qjyf3"),
"invisible": SubResource("Animation_rl0ji"),
"visible": SubResource("Animation_rlaa7")
}

[sub_resource type="LabelSettings" id="LabelSettings_qax3q"]
font = ExtResource("2_e6hdv")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_nipft"]
font = ExtResource("2_e6hdv")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_yr86l"]
font = ExtResource("2_e6hdv")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_sbkm0"]
font = ExtResource("2_e6hdv")
font_size = 20

[sub_resource type="Theme" id="Theme_hqdfu"]
default_font = ExtResource("2_e6hdv")
default_font_size = 38
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 1)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/align_to_largest_stylebox = 0
Button/constants/h_separation = 0
Button/constants/icon_max_width = 0
Button/constants/outline_size = 10

[node name="Shop" type="CanvasLayer"]
script = ExtResource("1_lvcpq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gij57")
}
autoplay = "invisible"

[node name="StatsControl" type="Control" parent="."]
custom_minimum_size = Vector2(1280, 580)
layout_mode = 3
anchors_preset = 0
offset_top = 140.0
offset_right = 640.0
offset_bottom = 720.0

[node name="Container" type="GridContainer" parent="StatsControl"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 212.0
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="Damage" type="BoxContainer" parent="StatsControl/Container"]
clip_contents = true
custom_minimum_size = Vector2(610, 0)
layout_mode = 2
vertical = true

[node name="Text" type="Label" parent="StatsControl/Container/Damage"]
layout_mode = 2
text = "Increase Damage + 1
Price: 500"
label_settings = SubResource("LabelSettings_qax3q")

[node name="Button" type="Button" parent="StatsControl/Container/Damage"]
layout_mode = 2
theme = ExtResource("2_t4vr5")
text = "Upgrade Damage"

[node name="Speed" type="BoxContainer" parent="StatsControl/Container"]
custom_minimum_size = Vector2(610, 0)
layout_mode = 2
vertical = true

[node name="Text" type="Label" parent="StatsControl/Container/Speed"]
layout_mode = 2
text = "Increase Run Speed + 5
Price: 500"
label_settings = SubResource("LabelSettings_nipft")

[node name="Button" type="Button" parent="StatsControl/Container/Speed"]
layout_mode = 2
theme = ExtResource("2_t4vr5")
text = "Upgrade Run Speed"

[node name="Attack" type="BoxContainer" parent="StatsControl/Container"]
custom_minimum_size = Vector2(610, 0)
layout_mode = 2
vertical = true

[node name="Text" type="Label" parent="StatsControl/Container/Attack"]
layout_mode = 2
text = "Increase Attack Radius + 5
Price: 500"
label_settings = SubResource("LabelSettings_yr86l")

[node name="Button" type="Button" parent="StatsControl/Container/Attack"]
layout_mode = 2
theme = ExtResource("2_t4vr5")
text = "Upgrade Attack Radiius"

[node name="Health" type="BoxContainer" parent="StatsControl/Container"]
custom_minimum_size = Vector2(610, 0)
layout_mode = 2
vertical = true

[node name="Text" type="Label" parent="StatsControl/Container/Health"]
layout_mode = 2
text = "Increase Health + 5
Price: 500"
label_settings = SubResource("LabelSettings_sbkm0")

[node name="Button" type="Button" parent="StatsControl/Container/Health"]
layout_mode = 2
theme = ExtResource("2_t4vr5")
text = "Upgrade Health"

[node name="AbilitiesControl" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(1280, 580)
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1280.0
offset_top = 140.0
offset_bottom = 720.0
grow_horizontal = 0

[node name="AttackAbilityContainer" type="GridContainer" parent="AbilitiesControl"]
visible = false
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 630.0
offset_bottom = 101.0
columns = 2

[node name="Slash" type="BoxContainer" parent="AbilitiesControl/AttackAbilityContainer"]
custom_minimum_size = Vector2(610, 0)
layout_mode = 2
vertical = true

[node name="Text" type="Label" parent="AbilitiesControl/AttackAbilityContainer/Slash"]
layout_mode = 2
text = "Ability - Slash
Price: 500"
label_settings = SubResource("LabelSettings_nipft")

[node name="Button" type="Button" parent="AbilitiesControl/AttackAbilityContainer/Slash"]
layout_mode = 2
theme = ExtResource("2_t4vr5")
text = "Unlock Slash Ability"

[node name="SlashWave" type="BoxContainer" parent="AbilitiesControl/AttackAbilityContainer"]
custom_minimum_size = Vector2(610, 0)
layout_mode = 2
vertical = true

[node name="Text" type="Label" parent="AbilitiesControl/AttackAbilityContainer/SlashWave"]
layout_mode = 2
text = "Ability - Slash Wave
Price: 500"
label_settings = SubResource("LabelSettings_nipft")

[node name="Button" type="Button" parent="AbilitiesControl/AttackAbilityContainer/SlashWave"]
layout_mode = 2
theme = ExtResource("2_t4vr5")
text = "Unlock Slash Wave Ability"

[node name="AgileAbilityContainer" type="GridContainer" parent="AbilitiesControl"]
visible = false
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 630.0
offset_bottom = 101.0
columns = 2

[node name="Dash" type="BoxContainer" parent="AbilitiesControl/AgileAbilityContainer"]
custom_minimum_size = Vector2(610, 0)
layout_mode = 2
vertical = true

[node name="Text" type="Label" parent="AbilitiesControl/AgileAbilityContainer/Dash"]
layout_mode = 2
text = "Ability - Dash
Price: 500"
label_settings = SubResource("LabelSettings_nipft")

[node name="Button" type="Button" parent="AbilitiesControl/AgileAbilityContainer/Dash"]
layout_mode = 2
theme = ExtResource("2_t4vr5")
text = "Unlock Dash Ability"

[node name="DashSlash" type="BoxContainer" parent="AbilitiesControl/AgileAbilityContainer"]
custom_minimum_size = Vector2(610, 0)
layout_mode = 2
vertical = true

[node name="Text" type="Label" parent="AbilitiesControl/AgileAbilityContainer/DashSlash"]
layout_mode = 2
text = "Ability - Dash Slash
Price: 500"
label_settings = SubResource("LabelSettings_nipft")

[node name="Button" type="Button" parent="AbilitiesControl/AgileAbilityContainer/DashSlash"]
layout_mode = 2
theme = ExtResource("2_t4vr5")
text = "Unlock Dash Slash Ability"

[node name="DefenseAbilityContainer" type="GridContainer" parent="AbilitiesControl"]
visible = false
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 60.0
columns = 2

[node name="Block" type="BoxContainer" parent="AbilitiesControl/DefenseAbilityContainer"]
custom_minimum_size = Vector2(610, 0)
layout_mode = 2
vertical = true

[node name="Text" type="Label" parent="AbilitiesControl/DefenseAbilityContainer/Block"]
layout_mode = 2
text = "Ability - Block
Price: 500"
label_settings = SubResource("LabelSettings_nipft")

[node name="Button" type="Button" parent="AbilitiesControl/DefenseAbilityContainer/Block"]
layout_mode = 2
theme = ExtResource("2_t4vr5")
text = "Unlock Block Ability"

[node name="ShieldBash" type="BoxContainer" parent="AbilitiesControl/DefenseAbilityContainer"]
custom_minimum_size = Vector2(610, 0)
layout_mode = 2
vertical = true

[node name="Text" type="Label" parent="AbilitiesControl/DefenseAbilityContainer/ShieldBash"]
layout_mode = 2
text = "Ability - Shield Bash
Price: 500"
label_settings = SubResource("LabelSettings_nipft")

[node name="Button" type="Button" parent="AbilitiesControl/DefenseAbilityContainer/ShieldBash"]
layout_mode = 2
theme = ExtResource("2_t4vr5")
text = "Unlock Shield Bash Ability"

[node name="ShopMenuControl" type="Control" parent="."]
custom_minimum_size = Vector2(1280, 140)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Close" type="Button" parent="ShopMenuControl"]
layout_mode = 0
offset_left = 1113.0
offset_top = 9.0
offset_right = 1271.0
offset_bottom = 51.0
theme = ExtResource("4_myh5m")
text = "Close"

[node name="Line2D" type="Line2D" parent="ShopMenuControl"]
position = Vector2(0, 60)
points = PackedVector2Array(0, 0, 1280, 0)
closed = true
width = 4.0
default_color = Color(0, 0, 0, 1)

[node name="Middle" type="Line2D" parent="ShopMenuControl/Line2D"]
position = Vector2(640, 0)
points = PackedVector2Array(0, 0, 0, 80)
closed = true
width = 4.0
default_color = Color(0, 0, 0, 1)

[node name="Bottom" type="Line2D" parent="ShopMenuControl/Line2D"]
position = Vector2(0, 80)
points = PackedVector2Array(0, 0, 1280, 0)
closed = true
width = 4.0
default_color = Color(0, 0, 0, 1)

[node name="StatsButton" type="Button" parent="ShopMenuControl/Line2D"]
offset_left = 5.0
offset_top = 5.0
offset_right = 635.0
offset_bottom = 75.0
theme = SubResource("Theme_hqdfu")
text = "STATS"
flat = true

[node name="AbilitiesButton" type="Button" parent="ShopMenuControl/Line2D"]
offset_left = 645.0
offset_top = 5.0
offset_right = 1275.0
offset_bottom = 75.0
theme = SubResource("Theme_hqdfu")
text = "ABILITIES"
flat = true

[connection signal="pressed" from="StatsControl/Container/Damage/Button" to="." method="_on_damage_pressed"]
[connection signal="pressed" from="StatsControl/Container/Speed/Button" to="." method="_on_run_speed_pressed"]
[connection signal="pressed" from="StatsControl/Container/Attack/Button" to="." method="_on_attack_radius_pressed"]
[connection signal="pressed" from="StatsControl/Container/Health/Button" to="." method="_on_health_pressed"]
[connection signal="pressed" from="AbilitiesControl/AttackAbilityContainer/Slash/Button" to="." method="_on_slash_ability_pressed"]
[connection signal="pressed" from="AbilitiesControl/AttackAbilityContainer/SlashWave/Button" to="." method="_on_slash_wave_ability_pressed"]
[connection signal="pressed" from="AbilitiesControl/AgileAbilityContainer/Dash/Button" to="." method="_on_dash_time_pressed"]
[connection signal="pressed" from="AbilitiesControl/AgileAbilityContainer/DashSlash/Button" to="." method="_on_dash_slash_ability_pressed"]
[connection signal="pressed" from="AbilitiesControl/DefenseAbilityContainer/Block/Button" to="." method="_on_block_ability_pressed"]
[connection signal="pressed" from="AbilitiesControl/DefenseAbilityContainer/ShieldBash/Button" to="." method="_on_shield_bash_ability_pressed"]
[connection signal="pressed" from="ShopMenuControl/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="ShopMenuControl/Line2D/StatsButton" to="." method="_on_stats_button_pressed"]
[connection signal="pressed" from="ShopMenuControl/Line2D/AbilitiesButton" to="." method="_on_abilities_button_pressed"]
